--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
+<!-- jQuery support -->
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
-<button>A___A</button>
+<body>
+  <button class="btn btn-info btn-md">A___A</button>
 
+  <div class="alert alert-success alert-dismissible" role="alert">
+    <button type="button" class="close" data-dismiss="alert">
+      <span aria-hidden="true">&times;</span>
+      <span class="sr-only">Close</span>
+    </button>
+    Oh no
+  </div>
+</body>
