--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html lang="zh-tw">
+<head>
+<meta charset="utf-8"/>
+<title>2014電資野臺</title>
+
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 
@@ -10,14 +15,103 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
-<body>
-  <button class="btn btn-info btn-md">A___A</button>
+<link rel="shortcut icon" href="./img/favicon.ico"/>
 
-  <div class="alert alert-success alert-dismissible" role="alert">
-    <button type="button" class="close" data-dismiss="alert">
-      <span aria-hidden="true">&times;</span>
-      <span class="sr-only">Close</span>
-    </button>
-    Oh no
+</head>
+
+<style>
+body{
+  //background: #000000 url("./img/logo.jpg") no-repeat fixed center top;
+}
+.carousel{
+  background: #777;
+}
+.item,
+.active {
+      height: 100%;
+}
+
+.fill {
+  width: 100%;
+  height: 100%;
+  background-position: center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+</style>
+
+<body>
+<nav class="navbar navbar-static-top navbar-inverse" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">2014電資野台</a>
+    </div>
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="#about">活動介紹</a></li>
+        <li><a href="#bands">樂團列表</a></li>
+        <li><a href="#agenda">節目單</a></li>
+        <!-- 
+        <li><a href="#">投票區</a></li>
+        -->
+      </ul>
+    </div><!-- /.nav-collapse -->
   </div>
+</nav>
+
+<div class="container" id="welcome">
+  <div id="welcome-showcase" class="carousel slide" data-ride="carousel" style="height: 375px;">
+    <!-- indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#welcome-showcase" data-slide-to="0" class="active"></li>
+      <li data-target="#welcome-showcase" data-slide-to="1"></li>
+    </ol>  
+
+    <!-- wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <div class="fill" style="background-image: url('./img/logo.jpg')"></div>
+        <div class="carousel-caption">
+          <h2>Yetai!</h2>
+        </div>
+      </div>
+      <div class="item">
+      </div>
+    </div>
+
+    <!-- controls -->
+    <a class="left carousel-control" href="#welcome-showcase" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#welcome-showcase" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+
+  </div>
+</div>
+
+<div class="container" id="bands">
+
+</div>
+
+<div class="container" id="about">
+
+</div>
+
+<div class="container" id="agenda">
+
+</div>
+
 </body>
+</html>
+
