--- a/index.html
+++ b/index.html
@@ -15,32 +15,12 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
+<!-- custom styles -->
+<link rel="stylesheet" href="./css/style.css">
+
 <link rel="shortcut icon" href="./img/favicon.ico"/>
 
 </head>
-
-<style>
-body{
-  //background: #000000 url("./img/logo.jpg") no-repeat fixed center top;
-}
-.carousel{
-  background: #777;
-}
-.item,
-.active {
-      height: 100%;
-}
-
-.fill {
-  width: 100%;
-  height: 100%;
-  background-position: center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-}
-</style>
 
 <body>
 <nav class="navbar navbar-static-top navbar-inverse" role="navigation">
