--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     <!-- wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <div class="fill" style="background-image: url('./img/logo.jpg')"></div>
+        <a href="#agenda"><div class="fill" style="background-image: url('./img/banner.png')"></div></a>
+      </div>
+      <div class="item">
         <div class="carousel-caption">
           <h2>Yetai!</h2>
         </div>
-      </div>
-      <div class="item">
       </div>
     </div>
 
