--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
+<!DOCTYPE html>
 <html lang="zh-tw">
+
 <head>
 <meta charset="utf-8"/>
 <title>2014電資野臺</title>
-
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-
 <!-- jQuery support -->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-
 <!-- custom styles -->
 <link rel="stylesheet" href="./css/style.css">
-
 <link rel="shortcut icon" href="./img/favicon.ico"/>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -53,13 +49,22 @@
     <ol class="carousel-indicators">
       <li data-target="#welcome-showcase" data-slide-to="0" class="active"></li>
       <li data-target="#welcome-showcase" data-slide-to="1"></li>
+      <li data-target="#welcome-showcase" data-slide-to="2"></li>
     </ol>  
 
     <!-- wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <a href="#agenda"><div class="fill" style="background-image: url('./img/banner.png')"></div></a>
+        <a href="#agenda"><img src="./img/banner.png"/></a>
       </div>
+      <div class="item">
+      
+        <a href="#agenda"><img src="./img/banner.png"/></a>
+        <div class="carousel-caption">
+          <h2>Yetai!</h2>
+        </div>
+      </div>
+      
       <div class="item">
         <div class="carousel-caption">
           <h2>Yetai!</h2>
