--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </nav>
 
 <div class="container" id="welcome">
-  <div id="welcome-showcase" class="carousel slide" data-ride="carousel" style="height: 375px;">
+  <div id="welcome-showcase" class="carousel slide" data-ride="carousel">
     <!-- indicators -->
     <ol class="carousel-indicators">
       <li data-target="#welcome-showcase" data-slide-to="0" class="active"></li>
@@ -65,11 +65,6 @@
         </div>
       </div>
       
-      <div class="item">
-        <div class="carousel-caption">
-          <h2>Yetai!</h2>
-        </div>
-      </div>
     </div>
 
     <!-- controls -->
