--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-static-top navbar-inverse" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -44,6 +44,7 @@
 </nav>
 
 <div class="container" id="welcome">
+<div class="row">
   <div id="welcome-showcase" class="carousel slide" data-ride="carousel">
     <!-- indicators -->
     <ol class="carousel-indicators">
@@ -78,6 +79,7 @@
     </a>
 
   </div>
+</div>
 </div>
 
 <div class="container" id="bands">
