test mobile viewport

--- a/index.html
+++ b/index.html
@@ -43,51 +43,56 @@
   </div>
 </nav>
 
-<div class="container" id="welcome">
-<div class="row">
-  <div id="welcome-showcase" class="carousel slide" data-ride="carousel">
-    <!-- indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#welcome-showcase" data-slide-to="0" class="active"></li>
-      <li data-target="#welcome-showcase" data-slide-to="1"></li>
-      <li data-target="#welcome-showcase" data-slide-to="2"></li>
-    </ol>  
-
-    <!-- wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <a href="#agenda"><img src="./img/banner.png"/></a>
-      </div>
-      <div class="item">
-      
-        <a href="#agenda"><img src="./img/banner.png"/></a>
-        <div class="carousel-caption">
-          <h2>Yetai!</h2>
+<div class="container" id="bands">
+  <div class="row">
+    <div class="media">
+      <a class="media-left" data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
+        <img src="./img/drum.jpg" alt="..." class="img-circle img-responsive" style="width:100px;">
+      </a>
+      <div class="media-body">
+        <h4 class="media-heading">英俊泥 </h4>
+        歌曲：<br>
+Red Hot Chili Pepper-Goodbye Hooray(3:50)<br>
+Jason Mraz-Butterfly(5:00)<br>
+John Mayer-Slow Dancing In A Burnig Room(4:02)<br>
+Michael  Jackson-Love Never Felt So Good(3:55)<br>
+        <div id="collapse1" class="collapse">
+                團員: <br>
+        電機二 ＊張聖農<br>
+        電機二 游理聿<br>
+        土木二 張家睿<br>
+        機械二 胡哲儒<br>
+        土木三 陳正澔<br>
+        牙醫二 高開元<br>
+        <br>
+        樂團介紹： <br>
+        <br>
         </div>
       </div>
-      
     </div>
-
-    <!-- controls -->
-    <a class="left carousel-control" href="#welcome-showcase" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#welcome-showcase" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-
+  
+  
+  <!--
+    <div class="col-xs-4">
+      <a href="#band1">
+        <img src="./img/drum.jpg" class="img-circle img-responsive">
+      </a>
+    </div>
+    <div class="col-xs-4">
+      <a href="#band2">
+        <img src="./img/coldplay.jpg" class="img-circle img-responsive">
+      </a>
+    </div>
+    <div class="col-xs-4">
+      <a href="#band3">
+        <img src="./img/drum.jpg" class="img-circle img-responsive">
+      </a>
+    </div>
+    -->
   </div>
-</div>
-</div>
-
-<div class="container" id="bands">
-
 </div>
 
 <div class="container" id="about">
-
 </div>
 
 <div class="container" id="agenda">
