test mobile viewport

--- a/index.html
+++ b/index.html
@@ -45,54 +45,303 @@
 
 <div class="container" id="bands">
   <div class="row">
-    <div class="media">
-      <a class="media-left" data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapse1">
-        <img src="./img/drum.jpg" alt="..." class="img-circle img-responsive" style="width:100px;">
-      </a>
-      <div class="media-body">
-        <h4 class="media-heading">英俊泥 </h4>
-        歌曲：<br>
-Red Hot Chili Pepper-Goodbye Hooray(3:50)<br>
-Jason Mraz-Butterfly(5:00)<br>
-John Mayer-Slow Dancing In A Burnig Room(4:02)<br>
-Michael  Jackson-Love Never Felt So Good(3:55)<br>
-        <div id="collapse1" class="collapse">
-                團員: <br>
-        電機二 ＊張聖農<br>
-        電機二 游理聿<br>
-        土木二 張家睿<br>
-        機械二 胡哲儒<br>
-        土木三 陳正澔<br>
-        牙醫二 高開元<br>
-        <br>
-        樂團介紹： <br>
-        <br>
-        </div>
-      </div>
-    </div>
-  
-  
-  <!--
     <div class="col-xs-4">
-      <a href="#band1">
-        <img src="./img/drum.jpg" class="img-circle img-responsive">
+      <a href="#band1" class="thumbnail">
+        <img src="./img/drum.jpg" class="img-responsive">
+      </a>
+      <a href="#band4" class="thumbnail">
+        <img src="./img/coldplay.jpg" class="img-responsive">
+      </a>
+      <a href="#band7" class="thumbnail">
+        <img src="./img/coldplay.jpg" class="img-responsive">
+      </a>
+      <a href="#band10" class="thumbnail">
+        <img src="./img/coldplay.jpg" class="img-responsive">
       </a>
     </div>
     <div class="col-xs-4">
-      <a href="#band2">
-        <img src="./img/coldplay.jpg" class="img-circle img-responsive">
+      <a href="#band2" class="thumbnail">
+        <img src="./img/coldplay.jpg" class="img-responsive">
+      </a>
+      <a href="#band5" class="thumbnail">
+        <img src="./img/coldplay.jpg" class="img-responsive">
+      </a>
+      <a href="#band8" class="thumbnail">
+        <img src="./img/drum.jpg" class="img-responsive">
+      </a>
+      <a href="#band11" class="thumbnail">
+        <img src="./img/drum.jpg" class="img-responsive">
       </a>
     </div>
     <div class="col-xs-4">
-      <a href="#band3">
-        <img src="./img/drum.jpg" class="img-circle img-responsive">
+      <a href="#band3" class="thumbnail">
+        <img src="./img/drum.jpg" class="img-responsive">
+      </a>
+      <a href="#band6" class="thumbnail">
+        <img src="./img/drum.jpg" class="img-responsive">
+      </a>
+      <a href="#band9" class="thumbnail">
+        <img src="./img/drum.jpg" class="img-responsive">
+      </a>
+      <a href="#band12" class="thumbnail">
+        <img src="./img/coldplay.jpg" class="img-responsive">
       </a>
     </div>
-    -->
   </div>
 </div>
 
 <div class="container" id="about">
+  <div class="well" id="band1">
+    <h4>1. 英俊泥</h4>
+    <p>
+      團員: <br>
+      電機二 ＊張聖農<br>
+      電機二 游理聿<br>
+      土木二 張家睿<br>
+      機械二 胡哲儒<br>
+      土木三 陳正澔<br>
+      牙醫二 高開元<br>
+      <br>
+      樂團介紹：<br> 
+      <br>
+      歌曲：<br>
+      Red Hot Chili Pepper-Goodbye Hooray<br>
+      Jason Mraz-Butterfly<br>
+      John Mayer-Slow Dancing In A Burnig Room<br>
+      Michael  Jackson-Love Never Felt So Good
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band2">
+    <h4>2. Football Love</h4>
+    <p>
+團員: <br>
+＊黃致皓 電機四 <br>
+簡上博 電機四 <br>
+黃柏豪 光電碩二 <br>
+章尚群 文化大學 傳播四 <br>
+康偉理 台北大學 財金三 <br>
+ <br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+自創 - Black Waltz<br>
+Maybeshewill - co-conspirators <br>
+自創 - 歧角
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band3">
+    <h4>3. PA大哥</h4>
+    <p>
+團員：<br>
+＊電機三 李驊恩<br>
+電機三 李凱皇<br>
+電機三 許遠哲<br>
+電機三 李威德<br>
+化工三 張兆文<br>
+獸醫二 Mario<br>
+聖約翰科大醫護資訊一 吳學穎<br>
+<br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+Toto-King of the world<br>
+汪峰-春天裡<br>
+FTIsland-Black chocolate
+
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band4">
+    <h4>4. 在十字路口遇見奐晴</h4>
+    <p>
+團員:<br>
+陳奐晴 電機二 <br>
+＊黃學亞 電機三 <br>
+賴宜聲 財金三 <br>
+楊弘宇 農化所 <br>
+蔡煒宣 化工四 <br>
+李承晏 政大法律<br>
+<br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+Ylvis-Jan Egeland<br>
+自創-醒<br>
+Oasis - Don't Look Back In Anger
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band5">
+    <h4>5. 伊妍喃噤</h4>
+    <p>
+電機四 ＊唐寬<br>
+電機四 林建甫<br>
+電機四 謝伊妍<br>
+電機四 張達智<br>
+電機四 吳京達 <br>
+經濟二 林谷炘<br>
+<br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+HE有激人 - 超級白 <br>
+楊乃文 - 我給的愛 <br>
+Phil Collins - Easy Lover 
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band6">
+    <h4>6. Hello, World!</h4>
+    <p>
+團員：<br>
+電機一 ＊許秉鈞<br>
+電機一 汪子茗<br>
+電機一 陳秉鴻<br>
+電機一 陳元昊<br>
+電機一 童寬<br>
+電機一 徐一真<br>
+電機一 張顥霆<br>
+<br>
+樂團介紹：<br>
+ <br>
+歌曲：<br>
+<br>
+Sanata - Summer Lady <br>
+The Click Five - Mary Jane<br>
+Guns n' Roses - Don't Cry <br>
+John Mayer - Daughters
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band7">
+    <h4>7. 白雪公主與七矮人</h4>
+    <p>
+團員：<br>
+心理碩二 林楷潔<br>
+電機一 張洁瑞<br>
+機械一 熊家和<br>
+電機一 曾威程<br>
+電機一 李育嘉<br>
+電機一 郭彥滕<br>
+生機一 周至恩<br>
+政治一 黃啟祐<br>
+電機一 ＊汪子茗<br>
+ <br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+Mr.Big - Shine <br>
+Oasis - Stop Crying Your Heart Out <br>
+Birdy - Wings <br>
+Bon Jovi - Always 
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band8">
+    <h4>8. Canons</h4>
+    <p>
+團員：<br>
+電機三 ＊洪亦德<br>
+電機三 沈恩禾<br>
+電機三 龔晏徵<br>
+心理三 劉啟鍠<br>
+ <br>
+樂團介紹：<br>
+創團宗旨：<br>
+1. 人如其名。<br>
+2. 挑戰練團次數下限的野台團體。<br>
+團員介紹：<br>
+一個每天忙著雷系務活動、一個每天忙著贏商業競賽、一個每天忙著爽睡覺爽打GAME、一個每天忙著用力睡過頭。<br>
+電機三 洪亦德 <br>
+電機三 龔晏徵 <br>
+電機三 沈恩禾 <br>
+心理三 劉啟鍠<br>
+這四隻canons，四隻巨砲，就算再忙，就算再雷，就算再trol，也要尬一下野台，<br>
+祝大家喝酒喝到飽，喝到爽。<br>
+<br>
+歌曲：<br>
+
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band9">
+    <h4>9. Reunion</h4>
+    <p>
+團員：<br>
+資工二 王浩恩<br>
+資工二 林家緯<br>
+中正通訊 許銘宸<br>
+政大會計 蘇彥誠<br>
+<br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+滅火器-海上的人<br>
+John Mayer - Slow Dancing in a Burning Room <br>
+io - 真實
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band10">
+    <h4>10. 別讓泮池不開心</h4>
+    <p>
+團員：<br>
+資工二 ＊謝其良<br>
+資工一 張以白<br>
+生科ㄧ 蔡旻昱<br>
+師大物理ㄧ 劉彥成<br>
+化學二 卓冠甫<br>
+<br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+Angra - Acid Rain<br>
+Dream Theater - On The Back Of Angels<br>
+One OK Rock - Clock Strikes
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band11">
+    <h4>11. The Ins.</h4>
+    <p>
+團員：<br>
+資工二：陳映紅<br>
+資工二：楊喬宇<br>
+資工二：陳思憫<br>
+資工二：郭傳駿<br>
+資工二：陳璽安<br>
+<br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+P!nk – Try<br>
+Rihanna – Diamonds<br>
+Avril Lavigne - Nobody's Home
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
+  <div class="well" id="band12">
+    <h4>12. </h4>
+    <p>
+團員:<br>
+資工教授 林軒田<br>
+資工ㄧ 張以白<br>
+資工二 林祐廷<br>
+資工二 陳思憫<br>
+資工二 呂明臻<br>
+資工二 王浩恩<br>
+<br>
+樂團介紹：<br>
+<br>
+歌曲：<br>
+趙傳 - 我是ㄧ隻小小鳥<br>
+The Beatles - Let It Be<br>
+周杰倫 - 蝸牛
+    </p>
+    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  </div>
 </div>
 
 <div class="container" id="agenda">
