--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ The Beatles - Let It Be<br>
   </div>
 </div>
 
-<div class="container" id="agenda">
+<div class="container-fluid" id="agenda">
 
 </div>
 
