totally not finished but Calculus is over

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <a class="navbar-brand" href="#">2014電資野台</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav pull-right">
         <li><a href="#about">活動介紹</a></li>
         <li><a href="#bands">樂團列表</a></li>
         <li><a href="#agenda">節目單</a></li>
@@ -42,308 +42,389 @@
     </div><!-- /.nav-collapse -->
   </div>
 </nav>
-
+<nav>
+  <ul class="pagination-lg pagination">
+    <li><a href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+    <li><a href="#band1">1</a></li>
+    <li><a href="#band2">2</a></li>
+    <li><a href="#band3">3</a></li>
+    <li><a href="#band4">4</a></li>
+    <li><a href="#band5">5</a></li>
+    <li><a href="#band6">6</a></li>
+    <li><a href="#band7">7</a></li>
+    <li><a href="#band8">8</a></li>
+    <li><a href="#band9">9</a></li>
+    <li><a href="#band10">10</a></li>
+    <li><a href="#band11">11</a></li>
+    <li><a href="#band12">12</a></li>
+    <li><a href="#band13">13</a></li>
+    <li><a href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+  </ul>
+</nav>
 <div class="container" id="bands">
-  <div class="row">
-    <div class="col-xs-4">
-      <a href="#band1" class="thumbnail">
-        <img src="./img/drum.jpg" class="img-responsive">
-      </a>
-      <a href="#band4" class="thumbnail">
-        <img src="./img/coldplay.jpg" class="img-responsive">
-      </a>
-      <a href="#band7" class="thumbnail">
-        <img src="./img/coldplay.jpg" class="img-responsive">
-      </a>
-      <a href="#band10" class="thumbnail">
-        <img src="./img/coldplay.jpg" class="img-responsive">
-      </a>
-    </div>
-    <div class="col-xs-4">
-      <a href="#band2" class="thumbnail">
-        <img src="./img/coldplay.jpg" class="img-responsive">
-      </a>
-      <a href="#band5" class="thumbnail">
-        <img src="./img/coldplay.jpg" class="img-responsive">
-      </a>
-      <a href="#band8" class="thumbnail">
-        <img src="./img/drum.jpg" class="img-responsive">
-      </a>
-      <a href="#band11" class="thumbnail">
-        <img src="./img/drum.jpg" class="img-responsive">
-      </a>
-    </div>
-    <div class="col-xs-4">
-      <a href="#band3" class="thumbnail">
-        <img src="./img/drum.jpg" class="img-responsive">
-      </a>
-      <a href="#band6" class="thumbnail">
-        <img src="./img/drum.jpg" class="img-responsive">
-      </a>
-      <a href="#band9" class="thumbnail">
-        <img src="./img/drum.jpg" class="img-responsive">
-      </a>
-      <a href="#band12" class="thumbnail">
-        <img src="./img/coldplay.jpg" class="img-responsive">
-      </a>
-    </div>
-  </div>
+  
 </div>
 
-<div class="container" id="about">
+<div class="container-fluid" id="about">
   <div class="well" id="band1">
-    <h4>1. 英俊泥</h4>
-    <p>
-      團員: <br>
-      電機二 ＊張聖農<br>
-      電機二 游理聿<br>
-      土木二 張家睿<br>
-      機械二 胡哲儒<br>
-      土木三 陳正澔<br>
-      牙醫二 高開元<br>
-      <br>
-      樂團介紹：<br> 
-      <br>
-      歌曲：<br>
-      Red Hot Chili Pepper-Goodbye Hooray<br>
-      Jason Mraz-Butterfly<br>
-      John Mayer-Slow Dancing In A Burnig Room<br>
-      Michael  Jackson-Love Never Felt So Good
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+  <div class = "row-fluid">
+  <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+    <h4> 英俊泥 </h4>
+團員: 
+電機二 張聖農
+電機二 游理聿
+土木二 張家睿
+機械二 胡哲儒
+土木三 陳正澔
+牙醫二 高開元
+
+樂團介紹： 
+Vocal沒很猛
+Guitarist一個太謙虛一個太隨和
+Drummer編到自己打不出來
+Bassist都不來練團
+Keyboard沒keyboard
+這團竟然還不錯
+我們是英俊泥...
+
+歌曲：
+Red Hot Chili Pepper-Goodbye Hooray
+Jason Mraz-Butterfly
+John Mayer-Slow Dancing In A Burnig Room
+Michael Jackson-Love Never Felt So Good
+</div>
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band2">
-    <h4>2. Football Love</h4>
-    <p>
-團員: <br>
-＊黃致皓 電機四 <br>
-簡上博 電機四 <br>
-黃柏豪 光電碩二 <br>
-章尚群 文化大學 傳播四 <br>
-康偉理 台北大學 財金三 <br>
- <br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-自創 - Black Waltz<br>
-Maybeshewill - co-conspirators <br>
-自創 - 歧角
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+    <h4>別讓泮池不開心</h4>
+團員：
+資工二：謝其良
+資工一：張以白
+生科ㄧ：蔡旻昱
+師大物理ㄧ：劉彥成
+化學二：卓冠甫
+
+樂團介紹：
+泮池們最近看起來不太開心
+可能是剛發期中考考卷的緣故 沒關係 我們保證會給泮池們一個精彩絕倫的夜晚ㄧ群從大同出發的孩子們 加上客座Stream of Memory的主唱利用各種姿各種勢手法 製造各種場合各種情調保證能滿足各位泮池們的感＆知覺細胞讓各位看來還想再看 聽了還想再聽摸了還想再摸 叫了還想再叫還有好喝的啤酒助興～就好好的期待吧12/19 別讓泮池不開心！！！
+
+歌曲：
+Angra - Acid Rain
+Dream Theater - On The Back Of Angels
+One OK Rock - Clock Strikes
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band3">
-    <h4>3. PA大哥</h4>
-    <p>
-團員：<br>
-＊電機三 李驊恩<br>
-電機三 李凱皇<br>
-電機三 許遠哲<br>
-電機三 李威德<br>
-化工三 張兆文<br>
-獸醫二 Mario<br>
-聖約翰科大醫護資訊一 吳學穎<br>
-<br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-Toto-King of the world<br>
-汪峰-春天裡<br>
-FTIsland-Black chocolate
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+   <h4>Hello, World!</h4>
+團員：
+電機一 許秉鈞
+電機一 汪子茗
+電機一 陳秉鴻
+電機一 陳元昊
+電機一 童寬
+電機一 徐一真
+電機一 張顥霆
+
+樂團介紹：
+ ---
+許秉鈞：…有一個樂團叫做How To Program C++
+童寬：那我們只好Hello, World!
+--- 
+小海豚與系花紅遍電機B03但不是團員
+電機一魯團和隔壁混搭溫溫團大對比
+系排團取的團名過猛只好收斂一些
+真˙土豪牛牛跨年團必須衝一發
+電機四魯是最清新健康不嘴砲
+永遠不要挑戰彥廷雷的決心
+我是小平子，覺得驕傲^^
+
+且慢，還有團員介紹
+
+Vocal – 常忘記借練團室之心智年齡三歲的秉鈞
+Vocal – 比樓上猛一百倍但搖沙鈴慘輸的元昊
+Bass – 忘記普化小考之練團時是最電的秉鴻
+Keyboard – 覺得抓歌沒有難度的唯一真神
+Drum – 接再多團也不怕的鼓神巴菲特
+Guitar – 一把吉他罩全團的童神
+Guitar – 壓軸之Solo真的帥之沒得睡的霆神
+
+「咦，妳說威神跑去哪了？
+哦，他太溫，是don’t-care term」
+
+舞會甫結束有點微醺又要怒喝一波
+彼此都有等量的美的感受
+不修交電，野台篇
+
+歌曲：
+
+Sanata - Summer Lady 
+The Click Five - Mary Jane
+Guns n' Roses - Don't Cry 
+John Mayer - Daughters
 
     </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band4">
-    <h4>4. 在十字路口遇見奐晴</h4>
-    <p>
-團員:<br>
-陳奐晴 電機二 <br>
-＊黃學亞 電機三 <br>
-賴宜聲 財金三 <br>
-楊弘宇 農化所 <br>
-蔡煒宣 化工四 <br>
-李承晏 政大法律<br>
-<br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-Ylvis-Jan Egeland<br>
-自創-醒<br>
-Oasis - Don't Look Back In Anger
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+  <h4>資工跨屆團</h4>
+團員:
+資工教授 林軒田
+資工ㄧ 張以白
+資工二 林祐廷
+資工二 陳思憫
+資工二 呂明臻
+資工二 王浩恩
+
+樂團介紹：
+你們知道為甚麼考試前實在沒辦法讀書嘛~
+因為啊... 
+「考完試才能知道自己哪裡不會啊」
+嗯嗯~
+總之我想說的是
+大家快來看資工軒田大神的英姿吧~!!
+
+歌曲：
+趙傳 - 我是ㄧ隻小小鳥
+The Beatles - Let It Be
+周杰倫 - 蝸牛
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band5">
-    <h4>5. 伊妍喃噤</h4>
-    <p>
-電機四 ＊唐寬<br>
-電機四 林建甫<br>
-電機四 謝伊妍<br>
-電機四 張達智<br>
-電機四 吳京達 <br>
-經濟二 林谷炘<br>
-<br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-HE有激人 - 超級白 <br>
-楊乃文 - 我給的愛 <br>
-Phil Collins - Easy Lover 
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+<h4>資結●夢醒十分（電機）</h4>
+團員：
+教授 Ric 黃鐘揚 
+助教 Ｍike Wang
+電機一 李育嘉
+電機一 童寬
+電機三 黃士弘
+電機二 董皓文
+電機二 侯信宇
+
+樂團介紹：
+...凌晨4點24分誓言，如果再de不出bug，就這樣與妳"吻別"。
+...晚上8點58分妳背對著我，毅然如當初我放棄妳「別離開我，"好不好？"」
+對著無數亂碼，眼角開始閃爍，"夢醒時分"，想要挽回些甚麼......
+由主唱Ric教授、Mike Wang助教強勢主打！與不知天高地厚的兩位大一吉他手(童寬與李育嘉)，不歸路上的大二鼓手與鍵盤手(董皓文與侯信宇)、歷劫資結沙場的大三貝斯手(黃士弘)跨屆團---資結●夢醒時分，教授將悄悄喚醒，醉生夢死的肝臟們！
+
+歌曲：
+張學友 - 吻別
+五月天 - 好不好
+伍百 - 夢醒時分
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band6">
-    <h4>6. Hello, World!</h4>
-    <p>
-團員：<br>
-電機一 ＊許秉鈞<br>
-電機一 汪子茗<br>
-電機一 陳秉鴻<br>
-電機一 陳元昊<br>
-電機一 童寬<br>
-電機一 徐一真<br>
-電機一 張顥霆<br>
-<br>
-樂團介紹：<br>
- <br>
-歌曲：<br>
-<br>
-Sanata - Summer Lady <br>
-The Click Five - Mary Jane<br>
-Guns n' Roses - Don't Cry <br>
-John Mayer - Daughters
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+<h4>在十字路口遇見奐晴</h4>
+團員:
+電機二 陳奐晴
+電機三 黃學亞
+財金三 賴宜聲
+農化所 楊弘宇
+化工四 蔡煒宣
+政大法律 李承晏
+
+樂團介紹：
+Crossroad 十字路口 合唱團
+成團於 2013年5月，從最初的成員主唱 小八 及貝斯手 尼克 及其他成員交替至今還有吉他手 Ethan，鍵盤手 Andy 及鼓手 亞亞 ，五位目前為台大與政大的在校生。Crossroad的曲風走流行創作，但亦不排斥各種曲風的可能性，致力在演奏及創作能令人朗朗上口的音樂，認為音樂不必有太多拘束，無論以何種曲風或是形式呈現，目的是要帶給自己及欣賞音樂的人快樂。
+
+陳奐晴 被壞學長抓來刷chord的吉他手
+
+歌曲：
+Ylvis-Jan Egeland
+自創-醒
+Oasis - Don't Look Back In Anger
     </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band7">
-    <h4>7. 白雪公主與七矮人</h4>
-    <p>
-團員：<br>
-心理碩二 林楷潔<br>
-電機一 張洁瑞<br>
-機械一 熊家和<br>
-電機一 曾威程<br>
-電機一 李育嘉<br>
-電機一 郭彥滕<br>
-生機一 周至恩<br>
-政治一 黃啟祐<br>
-電機一 ＊汪子茗<br>
- <br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-Mr.Big - Shine <br>
-Oasis - Stop Crying Your Heart Out <br>
-Birdy - Wings <br>
-Bon Jovi - Always 
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+ <h4>伊妍喃噤</h4>
+電機四 唐寬
+電機四 林建甫
+電機四 謝伊妍
+電機四 張達智
+電機四 吳京達 
+經濟二 林谷炘
+
+樂團介紹：
+只會唱歌 一言既出一言難盡一元復始的Vocal 謝伊妍超級掰掰掰掰掰~的Vocal 張達智無精打采的Bass手 吳京達節拍器會自己變慢的鼓手 林建甫豆腐心的吉他手 林谷炘多功能工具人 木吉他手+KB手+合音 唐寬團介限100個字只好伊妍喃噤
+
+歌曲：
+HE有激人 - 超級白 
+楊乃文 - 我給的愛 
+Phil Collins - Easy Lover 
     </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band8">
-    <h4>8. Canons</h4>
-    <p>
-團員：<br>
-電機三 ＊洪亦德<br>
-電機三 沈恩禾<br>
-電機三 龔晏徵<br>
-心理三 劉啟鍠<br>
- <br>
-樂團介紹：<br>
-創團宗旨：<br>
-1. 人如其名。<br>
-2. 挑戰練團次數下限的野台團體。<br>
-團員介紹：<br>
-一個每天忙著雷系務活動、一個每天忙著贏商業競賽、一個每天忙著爽睡覺爽打GAME、一個每天忙著用力睡過頭。<br>
-電機三 洪亦德 <br>
-電機三 龔晏徵 <br>
-電機三 沈恩禾 <br>
-心理三 劉啟鍠<br>
-這四隻canons，四隻巨砲，就算再忙，就算再雷，就算再trol，也要尬一下野台，<br>
-祝大家喝酒喝到飽，喝到爽。<br>
-<br>
-歌曲：<br>
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+<h4>白雪公主與七矮人</h4>
+團員：
+心理碩二 林楷潔
+電機一 張洁瑞
+機械一 熊家和
+電機一 曾威程
+電機一 李育嘉
+電機一 郭彥滕
+生機一 周至恩
+政治一 黃啟祐
+電機一 汪子茗
+ 
+樂團介紹：
+「嘿咻～嘿咻～好累阿！」  周至恩氣喘吁吁地抱怨著。
+「對阿～終於工作完了，可以吃白雪姊姊做的漢堡了！」  李育嘉一臉興奮地表示。
+「不要漢堡啦，我比較想吃拉麵」  此話甫畢，熊家和露出舌頭輕輕滑過嘴唇。
+「不要爭啦！只要是白雪姊姊做的都好吃郭彥滕幸福的神情露於言表。
+「前面的走快點啦！我已經等不及要回家了」  餓到發慌的汪子茗明顯已飢不擇食了。
+「诶？地上怎會有一顆咬過的蘋果？」  黃啟祐觀察敏銳，注意家門口有顆被咬了一口的蘋果。
+「咦？白雪姊姊怎麼倒在地上呢！」  最喜歡大姐姐的曾威程  一見到倒在地上的白雪姊姊，不禁驚呼一聲。
+ 
+正當大家徬徨無計之時，曾威程拿了一旁的吉他輕輕地刷了一段旋律，只見白雪姊姊眼皮微微地抽動，但七矮人卻已驚喜萬分！周志恩趕緊抓緊貝斯，黃啟祐則快步走上鋼琴檯，李育嘉和郭彥滕接好導線，熊家和調整好效果器，只等著鼓手汪子茗給個四拍，便要將白雪姊姊喚醒。
+此時周遭安靜無聲，突然傳來鼓棒敲擊的聲音。
+「喀－喀－喀－喀－」......
+ 
+究竟白雪姊姊是否能醒來呢？ 
+ 
+12/19電資野台
+一續上次五系舞會的童話主題
+白雪公主與七矮人將在公館PIPE上與大家
+共襄盛舉！！！！
 
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+歌曲：
+Mr.Big - Shine 
+Oasis - Stop Crying Your Heart Out 
+Birdy - Wings 
+Bon Jovi - Always 
+
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band9">
-    <h4>9. Reunion</h4>
-    <p>
-團員：<br>
-資工二 王浩恩<br>
-資工二 林家緯<br>
-中正通訊 許銘宸<br>
-政大會計 蘇彥誠<br>
-<br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-滅火器-海上的人<br>
-John Mayer - Slow Dancing in a Burning Room <br>
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+<h4>Reunion</h4>
+團員：
+資工二 王浩恩
+資工二 林家緯
+中正通訊 許銘宸
+政大會計 蘇彥誠
+
+樂團介紹：
+Old Friends.
+Beer.
+Music.
+Reunion.
+
+歌曲：
+滅火器-海上的人
+John Mayer - Slow Dancing in a Burning Room 
 io - 真實
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+</div>
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band10">
-    <h4>10. 別讓泮池不開心</h4>
-    <p>
-團員：<br>
-資工二 ＊謝其良<br>
-資工一 張以白<br>
-生科ㄧ 蔡旻昱<br>
-師大物理ㄧ 劉彥成<br>
-化學二 卓冠甫<br>
-<br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-Angra - Acid Rain<br>
-Dream Theater - On The Back Of Angels<br>
-One OK Rock - Clock Strikes
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+    <h4>11. The Ins.</h4>
+<h4>PA大哥</h4>
+團員：
+電機三 李驊恩
+電機三 李凱皇
+電機三 許遠哲
+電機三 李威德
+化工三 張兆文
+獸醫二 Mario
+聖約翰科大醫護資訊一 吳學穎
+
+樂團介紹：
+ROCKKKKKKKKK!
+人難免會感到迷惘，無論是對愛情亦或是人生方向‧‧‧
+但迷網只是浮雲，搖滾才是硬道理!
+我們是PA大哥!希望能在熱情的夜觸動你的心!
+
+歌曲：
+Toto-King of the world
+汪峰-春天裡
+FTIsland-Black chocolate
+</div>
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band11">
-    <h4>11. The Ins.</h4>
-    <p>
-團員：<br>
-資工二：陳映紅<br>
-資工二：楊喬宇<br>
-資工二：陳思憫<br>
-資工二：郭傳駿<br>
-資工二：陳璽安<br>
-<br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-P!nk – Try<br>
-Rihanna – Diamonds<br>
-Avril Lavigne - Nobody's Home
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+<h4>小蜜蜂</h4>
+團員：
+電機三 張瑞智
+資工二 呂明臻
+生機三 杜竣擇
+電機碩二 林廉喬
+電機碩一 許證捷
+電信碩一 潘善斌
+
+樂團介紹：
+嗡嗡嗡，嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡，嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡 ...嗡嗡嗡嗡嗡嗡~~~嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡!!
+ 
+我知道你看不懂
+來野台聽就懂了
+
+歌曲：
+pinkzebra - larger than life
+one ok rock - be the light
+coldplay - viva la vida
+</div>
+    </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
   </div>
   <div class="well" id="band12">
-    <h4>12. </h4>
-    <p>
-團員:<br>
-資工教授 林軒田<br>
-資工ㄧ 張以白<br>
-資工二 林祐廷<br>
-資工二 陳思憫<br>
-資工二 呂明臻<br>
-資工二 王浩恩<br>
-<br>
-樂團介紹：<br>
-<br>
-歌曲：<br>
-趙傳 - 我是ㄧ隻小小鳥<br>
-The Beatles - Let It Be<br>
-周杰倫 - 蝸牛
-    </p>
-    <a href="#" class="btn btn-xs btn-info">Back to top</a>
-  </div>
-</div>
+    <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+<h4>The Ins.</h4>
+團員：
+資工二 陳映紅
+資工二 楊喬宇
+資工二 陳思憫
+資工二 郭傳駿
+資工二 陳璽安
 
+樂團介紹：
+沒有，我們什麼都沒有除了灰底的sublime黑底的bash和系館地下室的紅藍沙發以外我們一無所有救贖，我們需要救贖我們需要寧靜的夜甘美的酒和動人的樂音以洗滌我們貧乏的心靈即使暗夜使我們迷失我們仍不會停止對於光明的找尋Cause music directs. Cause music is our inner treasure. We are The Ins.
+
+歌曲：
+P!nk – Try
+Rihanna – Diamonds
+Avril Lavigne - Nobody's Home
+</div></div>
+<div class="well" id="band13">
+  <div class = "col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive"></div>
+  <div class ="col-md-9">
+<h4>Football Love</h4>
+團員: 
+黃致皓 電機四 
+簡上博 電機四 
+黃柏豪 光電碩二 
+章尚群 文化大學 傳播四 
+康偉理 台北大學 財金三 
+ 
+樂團介紹：
+後搖,來自台北,我們不會踢足球。
+Hooligan 黃柏豪Goalkeeper 黃致皓Journeyman 康偉理Rainmaker 章尚群
+ https://www.facebook.com/footballloveofficial
+
+歌曲：
+自創 - Black Waltz
+Maybeshewill - co-conspirators 
+自創 - 歧角 
+</div></div>
 <div class="container-fluid" id="agenda">
 
 </div>
