--- a/index.html
+++ b/index.html
@@ -429,6 +429,14 @@ Maybeshewill - co-conspirators
 
 </div>
 
+<div class="container-fluid" id="voting-arena">
+    <iframe class="embed-responsive-item" width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/14YepbyheWTZTKtr7uXiePPuJe0d1EjcdIP78tj2Hq2Y/pubchart?oid=1472798053&amp;format=interactive"></iframe>
+  
+  <div class="embed-responsive embed-responsive-4by3">
+    <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/1_c8zQ9niC2jADm7SOwE67tHCSZieEocfIDJW5R4C1MA/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+  </div>
+</div>
+
 </body>
 </html>
 
