--- a/index.html
+++ b/index.html
@@ -90,7 +90,33 @@
                 <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
                 </div>
                 <div class="col-md-9">
-                    <h4> 英俊泥 </h4> 團員: 電機二 張聖農 電機二 游理聿 土木二 張家睿 機械二 胡哲儒 土木三 陳正澔 牙醫二 高開元 樂團介紹： Vocal沒很猛 Guitarist一個太謙虛一個太隨和 Drummer編到自己打不出來 Bassist都不來練團 Keyboard沒keyboard 這團竟然還不錯 我們是英俊泥... 歌曲： Red Hot Chili Pepper-Goodbye Hooray Jason Mraz-Butterfly John Mayer-Slow Dancing In A Burnig Room Michael Jackson-Love Never Felt So Good
+                    <h3> 英俊泥 </h3>
+                    <h4>團員</h4>
+                    <ul>
+                      <li>電機二：張聖農 </li>
+                      <li>電機二：游理聿 </li>
+                      <li>土木二：張家睿 </li>
+                      <li>機械二：胡哲儒 </li>
+                      <li>土木三：陳正澔 </li>
+                      <li>牙醫二：高開元 </li> 
+                    </ul>
+                    <h4>樂團介紹</h4> 
+                    <p>
+                      Vocal沒很猛  <br>
+                      Guitarist一個太謙虛一個太隨和  <br>
+                      Drummer編到自己打不出來  <br>
+                      Bassist都不來練團  <br>
+                      Keyboard沒keyboard  <br>
+                      這團竟然還不錯  <br>
+                      我們是英俊泥... 
+                    </p>
+                    <hr>
+                    <ol>
+                      <li> Red Hot Chili Pepper-Goodbye Hooray </li>
+                      <li>Jason Mraz-Butterfly </li>
+                      <li>John Mayer-Slow Dancing In A Burnig Room </li>
+                      <li>Michael Jackson-Love Never Felt So Good</li>
+                    </ol>
                 </div>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
         </div>
@@ -98,23 +124,116 @@
             <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
             </div>
             <div class="col-md-9">
-                <h4>別讓泮池不開心</h4> 團員： 資工二：謝其良 資工一：張以白 生科ㄧ：蔡旻昱 師大物理ㄧ：劉彥成 化學二：卓冠甫 樂團介紹： 泮池們最近看起來不太開心 可能是剛發期中考考卷的緣故 沒關係 我們保證會給泮池們一個精彩絕倫的夜晚ㄧ群從大同出發的孩子們 加上客座Stream of Memory的主唱利用各種姿各種勢手法 製造各種場合各種情調保證能滿足各位泮池們的感＆知覺細胞讓各位看來還想再看 聽了還想再聽摸了還想再摸 叫了還想再叫還有好喝的啤酒助興～就好好的期待吧12/19 別讓泮池不開心！！！ 歌曲： Angra - Acid Rain Dream Theater - On The Back Of Angels One OK Rock - Clock Strikes
+                <h3>別讓泮池不開心</h3> 
+                <h4>團員</h4> 
+                <ul>
+                  <li>資工二：謝其良 </li> 
+                  <li>資工一：張以白 </li>
+                  <li>生科ㄧ：蔡旻昱 </li>
+                  <li>師大物理ㄧ：劉彥成 </li>
+                  <li>化學二：卓冠甫 </li>
+                </ul>
+                <h4>樂團介紹</h4> 
+                <p>
+                泮池們最近看起來不太開心 <br>
+                可能是剛發期中考考卷的緣故 <br>
+                沒關係 我們保證會給泮池們一個精彩絕倫的夜晚 <br>
+                一群從大同出發的孩子們 加上客座Stream of Memory的主唱利用各種姿各種勢手法 <br>
+                製造各種場合各種情調保證能滿足各位泮池們的感＆知覺細胞讓各位看來還想再看 <br>
+                聽了還想再聽摸了還想再摸 叫了還想再叫還有好喝的啤酒助興～就好好的期待吧12/19 別讓泮池不開心！！！
+                </p>
+                <hr>
+                <ol> 
+                  <li>Angra - Acid Rain</li>
+                  <li> Dream Theater - On The Back Of Angels</li> 
+                  <li>One OK Rock - Clock Strikes</li>
+                </ol>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
         </div>
         <div class="well" id="band3">
             <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
             </div>
             <div class="col-md-9">
-                <h4>Hello, World!</h4> 團員： 電機一 許秉鈞 電機一 汪子茗 電機一 陳秉鴻 電機一 陳元昊 電機一 童寬 電機一 徐一真 電機一 張顥霆 樂團介紹： --- 許秉鈞：…有一個樂團叫做How To Program C++ 童寬：那我們只好Hello, World! --- 小海豚與系花紅遍電機B03但不是團員 電機一魯團和隔壁混搭溫溫團大對比 系排團取的團名過猛只好收斂一些 真˙土豪牛牛跨年團必須衝一發 電機四魯是最清新健康不嘴砲 永遠不要挑戰彥廷雷的決心 我是小平子，覺得驕傲^^ 且慢，還有團員介紹 Vocal – 常忘記借練團室之心智年齡三歲的秉鈞 Vocal – 比樓上猛一百倍但搖沙鈴慘輸的元昊 Bass – 忘記普化小考之練團時是最電的秉鴻 Keyboard – 覺得抓歌沒有難度的唯一真神 Drum – 接再多團也不怕的鼓神巴菲特 Guitar – 一把吉他罩全團的童神 Guitar – 壓軸之Solo真的帥之沒得睡的霆神 「咦，妳說威神跑去哪了？ 哦，他太溫，是don’t-care term」 舞會甫結束有點微醺又要怒喝一波 彼此都有等量的美的感受 不修交電，野台篇 歌曲： Sanata - Summer Lady The Click Five - Mary Jane Guns n' Roses - Don't Cry John Mayer - Daughters
-
+                <h3>Hello, World!</h3> 
+                <h4>團員</h4> 
+                <ul>
+                  <li>電機一：許秉鈞</li>
+                 <li>電機一：汪子茗</li>
+                 <li>電機一：陳秉鴻</li>
+                 <li>電機一：陳元昊</li>
+                 <li>電機一：童寬  </li>
+                 <li>電機一：徐一真</li>
+                 <li>電機一：張顥霆</li>
+                </ul> 
+                <h4>樂團介紹</h4>
+                <p>
+                  <blockquote>
+                    許秉鈞：…有一個樂團叫做How To Program C++ <br>
+                    童寬：那我們只好Hello, World!
+                  </blockquote> 
+                  小海豚與系花紅遍電機B03但不是團員 <br>
+                  電機一魯團和隔壁混搭溫溫團大對比<br> 
+                  系排團取的團名過猛只好收斂一些 <br>
+                  真˙土豪牛牛跨年團必須衝一發<br> 
+                  電機四魯是最清新健康不嘴砲 <br>
+                  永遠不要挑戰彥廷雷的決心  <br>
+                  我是小平子，覺得驕傲^^  <br>
+                   <br>
+                  且慢，還有團員介紹 
+                  <br>               
+                  Vocal – 常忘記借練團室之心智年齡三歲的秉鈞  <br>
+                  Vocal – 比樓上猛一百倍但搖沙鈴慘輸的元昊 <br>
+                  Bass – 忘記普化小考之練團時是最電的秉鴻  <br>
+                  Keyboard – 覺得抓歌沒有難度的唯一真神 <br>
+                  Drum – 接再多團也不怕的鼓神巴菲特 <br>
+                  Guitar – 一把吉他罩全團的童神 <br>
+                  Guitar – 壓軸之Solo真的帥之沒得睡的霆神  <br>
+                   <br>
+                  「咦，妳說威神跑去哪了？ <br>
+                  哦，他太溫，是don’t-care term」 <br>
+                  <br>
+                  舞會甫結束有點微醺又要怒喝一波 <br>
+                  彼此都有等量的美的感受  <br>
+                  不修交電，野台篇 
                 </p>
+                <hr>
+                <ol> 
+                  <li>Sanata - Summer Lady</li>
+                  <li> The Click Five - Mary Jane</li>
+                  <li> Guns n' Roses - Don't Cry </li>
+                  <li>John Mayer - Daughters</li>
+                </ol>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
         </div>
         <div class="well" id="band4">
             <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
             </div>
             <div class="col-md-9">
-                <h4>資工跨屆團</h4> 團員: 資工教授 林軒田 資工ㄧ 張以白 資工二 林祐廷 資工二 陳思憫 資工二 呂明臻 資工二 王浩恩 樂團介紹： 你們知道為甚麼考試前實在沒辦法讀書嘛~ 因為啊... 「考完試才能知道自己哪裡不會啊」 嗯嗯~ 總之我想說的是 大家快來看資工軒田大神的英姿吧~!! 歌曲： 趙傳 - 我是ㄧ隻小小鳥 The Beatles - Let It Be 周杰倫 - 蝸牛
+                <h3>資工跨屆團</h3> 
+                <h4>團員</h4> 
+                <ul>
+                  <li>資工教授：林軒田</li>
+                  <li>資工一：張以白</li>
+                  <li>資工二：林祐廷</li>
+                  <li>資工二：陳思憫</li>
+                  <li>資工二：呂明臻</li>
+                  <li>資工二：王浩恩</li>
+                </ul>
+                <h4>樂團介紹</h4> 
+                <p>
+                你們知道為甚麼考試前實在沒辦法讀書嘛~ <br>
+                  因為啊... <br>
+                  「考完試才能知道自己哪裡不會啊」<br>
+                  嗯嗯~ <br>
+                  總之我想說的是 <br>
+                  大家快來看資工軒田大神的英姿吧~!! 
+                </p>
+                <hr>
+                <ol>
+                  <li>趙傳 - 我是一隻小小鳥</li>
+                  <li> The Beatles - Let It Be </li>
+                  <li>周杰倫 - 蝸牛</li>
+                </ol>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
         </div>
         <div class="well" id="band5">
