--- a/index.html
+++ b/index.html
@@ -91,7 +91,6 @@
                 </div>
                 <div class="col-md-9">
                     <h3> 英俊泥 </h3>
-                    <h4>團員</h4>
                     <ul>
                       <li>電機二：張聖農 </li>
                       <li>電機二：游理聿 </li>
@@ -112,10 +111,10 @@
                     </p>
                     <hr>
                     <ol>
-                      <li> Red Hot Chili Pepper-Goodbye Hooray </li>
-                      <li>Jason Mraz-Butterfly </li>
-                      <li>John Mayer-Slow Dancing In A Burnig Room </li>
-                      <li>Michael Jackson-Love Never Felt So Good</li>
+                      <li> Red Hot Chili Pepper - Goodbye Hooray </li>
+                      <li>Jason Mraz - Butterfly </li>
+                      <li>John Mayer - Slow Dancing In A Burnig Room </li>
+                      <li>Michael Jackson - Love Never Felt So Good</li>
                     </ol>
                 </div>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
@@ -125,7 +124,6 @@
             </div>
             <div class="col-md-9">
                 <h3>別讓泮池不開心</h3> 
-                <h4>團員</h4> 
                 <ul>
                   <li>資工二：謝其良 </li> 
                   <li>資工一：張以白 </li>
@@ -155,7 +153,6 @@
             </div>
             <div class="col-md-9">
                 <h3>Hello, World!</h3> 
-                <h4>團員</h4> 
                 <ul>
                   <li>電機一：許秉鈞</li>
                  <li>電機一：汪子茗</li>
@@ -210,7 +207,6 @@
             </div>
             <div class="col-md-9">
                 <h3>資工跨屆團</h3> 
-                <h4>團員</h4> 
                 <ul>
                   <li>資工教授：林軒田</li>
                   <li>資工一：張以白</li>
@@ -240,38 +236,163 @@
             <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
             </div>
             <div class="col-md-9">
-                <h4>資結●夢醒十分（電機）</h4> 團員： 教授 Ric 黃鐘揚 助教 Ｍike Wang 電機一 李育嘉 電機一 童寬 電機三 黃士弘 電機二 董皓文 電機二 侯信宇 樂團介紹： ...凌晨4點24分誓言，如果再de不出bug，就這樣與妳"吻別"。 ...晚上8點58分妳背對著我，毅然如當初我放棄妳「別離開我，"好不好？"」 對著無數亂碼，眼角開始閃爍，"夢醒時分"，想要挽回些甚麼...... 由主唱Ric教授、Mike Wang助教強勢主打！與不知天高地厚的兩位大一吉他手(童寬與李育嘉)，不歸路上的大二鼓手與鍵盤手(董皓文與侯信宇)、歷劫資結沙場的大三貝斯手(黃士弘)跨屆團---資結●夢醒時分，教授將悄悄喚醒，醉生夢死的肝臟們！ 歌曲： 張學友 - 吻別 五月天 - 好不好 伍百 - 夢醒時分
+                <h3>資結●夢醒十分</h3>
+                <ul>
+                  <li>教授：Ric 黃鐘揚 </li>
+                  <li>助教：Mike Wang </li>
+                 <li>電機一： 李育嘉 </li>
+                 <li>電機一：童寬 </li>
+                 <li>電機三：黃士弘</li>
+                 <li>電機二：董皓文</li>
+                 <li>電機二：侯信宇 </li>
+                </ul>
+                <h4>樂團介紹</h4>
+                <p>
+                  ...凌晨4點24分誓言，如果再de不出bug，就這樣與妳"吻別"。<br>
+                  ...晚上8點58分妳背對著我，毅然如當初我放棄妳「別離開我，"好不好？"」<br>
+                  對著無數亂碼，眼角開始閃爍，"夢醒時分"，想要挽回些甚麼......<br>
+                  由主唱Ric教授、Mike Wang助教強勢主打！<br>
+                  與不知天高地厚的兩位大一吉他手(童寬與李育嘉)，<br>
+                  不歸路上的大二鼓手與鍵盤手(董皓文與侯信宇)、<br>
+                  歷劫資結沙場的大三貝斯手(黃士弘)跨屆團---資結●夢醒時分，教授將悄悄喚醒，醉生夢死的肝臟們！
+                </p>
+                <hr>
+                <ol> 
+                  <li> 張學友 - 吻別 </li>
+                  <li>五月天 - 好不好</li>
+                  <li> 伍百 - 夢醒時分</li>
+                </ol>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
         </div>
         <div class="well" id="band6">
             <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
             </div>
             <div class="col-md-9">
-                <h4>在十字路口遇見奐晴</h4> 團員: 電機二 陳奐晴 電機三 黃學亞 財金三 賴宜聲 農化所 楊弘宇 化工四 蔡煒宣 政大法律 李承晏 樂團介紹： Crossroad 十字路口 合唱團 成團於 2013年5月，從最初的成員主唱 小八 及貝斯手 尼克 及其他成員交替至今還有吉他手 Ethan，鍵盤手 Andy 及鼓手 亞亞 ，五位目前為台大與政大的在校生。Crossroad的曲風走流行創作，但亦不排斥各種曲風的可能性，致力在演奏及創作能令人朗朗上口的音樂，認為音樂不必有太多拘束，無論以何種曲風或是形式呈現，目的是要帶給自己及欣賞音樂的人快樂。 陳奐晴 被壞學長抓來刷chord的吉他手 歌曲： Ylvis-Jan Egeland 自創-醒 Oasis - Don't Look Back In Anger
+                <h3>在十字路口遇見奐晴</h3>
+                <ul>
+                 <li>電機二：陳奐晴</li>
+                 <li>電機三：黃學亞</li>
+                 <li>財金三：賴宜聲</li>
+                 <li>農化所：楊弘宇</li>
+                 <li>化工四：蔡煒宣</li>
+                 <li>政大法律：李承晏</li>
+                </ul>
+                <h4> 樂團介紹</h4> 
+                <p>
+                Crossroad 十字路口 合唱團<br>
+                成團於 2013年5月，從最初的成員主唱 小八 及貝斯手 尼克 及其他成員交替至今還有吉他手 Ethan，鍵盤手 Andy 及鼓手 亞亞 ，五位目前為台大與政大的在校生。<br>
+                Crossroad的曲風走流行創作，但亦不排斥各種曲風的可能性，致力在演奏及創作能令人朗朗上口的音樂，認為音樂不必有太多拘束，無論以何種曲風或是形式呈現，目的是要帶給自己及欣賞音樂的人快樂。<br>
+                  <br>
+                  陳奐晴 被壞學長抓來刷chord的吉他手 
                 </p>
+                <hr>
+                <ul>
+                  <li>Ylvis - Jan Egeland</li>
+                  <li> 自創 - 醒</li>
+                  <li> Oasis  - Don't Look Back In Anger</li>
+                </ul>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
         </div>
         <div class="well" id="band7">
             <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
             </div>
             <div class="col-md-9">
-                <h4>伊妍喃噤</h4> 電機四 唐寬 電機四 林建甫 電機四 謝伊妍 電機四 張達智 電機四 吳京達 經濟二 林谷炘 樂團介紹： 只會唱歌 一言既出一言難盡一元復始的Vocal 謝伊妍超級掰掰掰掰掰~的Vocal 張達智無精打采的Bass手 吳京達節拍器會自己變慢的鼓手 林建甫豆腐心的吉他手 林谷炘多功能工具人 木吉他手+KB手+合音 唐寬團介限100個字只好伊妍喃噤 歌曲： HE有激人 - 超級白 楊乃文 - 我給的愛 Phil Collins - Easy Lover
+                <h3>伊妍喃噤</h3>
+                <ul>
+                 <li>電機四：唐寬 </li>
+                 <li>電機四：林建甫</li>
+                 <li>電機四：謝伊妍</li>
+                 <li>電機四：張達智</li>
+                 <li>電機四：吳京達</li>
+                 <li>經濟二：林谷炘</li>
+                </ul>
+                <h4>樂團介紹</h4>
+                <p>
+                只會唱歌 一言既出一言難盡一元復始的Vocal 謝伊妍<br>
+                 超級掰掰掰掰掰~的Vocal 張達智<br>
+                 無精打采的Bass手 吳京達<br>
+                 節拍器會自己變慢的鼓手 林建甫<br>
+                 豆腐心的吉他手 林谷炘<br>
+                 多功能工具人 木吉他手+KB手+合音 唐寬<br>
+                 團介限100個字只好伊妍喃噤 <br>
                 </p>
+                <hr>
+                <ol>
+                  <li>HE有激人 - 超級白</li> 
+                  <li>楊乃文 - 我給的愛 </li>
+                  <li>Phil Collins - Easy Lover</li>
+                </ol>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
         </div>
         <div class="well" id="band8">
             <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
             </div>
             <div class="col-md-9">
-                <h4>白雪公主與七矮人</h4> 團員： 心理碩二 林楷潔 電機一 張洁瑞 機械一 熊家和 電機一 曾威程 電機一 李育嘉 電機一 郭彥滕 生機一 周至恩 政治一 黃啟祐 電機一 汪子茗 樂團介紹： 「嘿咻～嘿咻～好累阿！」 周至恩氣喘吁吁地抱怨著。 「對阿～終於工作完了，可以吃白雪姊姊做的漢堡了！」 李育嘉一臉興奮地表示。 「不要漢堡啦，我比較想吃拉麵」 此話甫畢，熊家和露出舌頭輕輕滑過嘴唇。 「不要爭啦！只要是白雪姊姊做的都好吃郭彥滕幸福的神情露於言表。 「前面的走快點啦！我已經等不及要回家了」 餓到發慌的汪子茗明顯已飢不擇食了。 「诶？地上怎會有一顆咬過的蘋果？」 黃啟祐觀察敏銳，注意家門口有顆被咬了一口的蘋果。 「咦？白雪姊姊怎麼倒在地上呢！」 最喜歡大姐姐的曾威程 一見到倒在地上的白雪姊姊，不禁驚呼一聲。 正當大家徬徨無計之時，曾威程拿了一旁的吉他輕輕地刷了一段旋律，只見白雪姊姊眼皮微微地抽動，但七矮人卻已驚喜萬分！周志恩趕緊抓緊貝斯，黃啟祐則快步走上鋼琴檯，李育嘉和郭彥滕接好導線，熊家和調整好效果器，只等著鼓手汪子茗給個四拍，便要將白雪姊姊喚醒。 此時周遭安靜無聲，突然傳來鼓棒敲擊的聲音。 「喀－喀－喀－喀－」...... 究竟白雪姊姊是否能醒來呢？ 12/19電資野台 一續上次五系舞會的童話主題 白雪公主與七矮人將在公館PIPE上與大家 共襄盛舉！！！！ 歌曲： Mr.Big - Shine Oasis - Stop Crying Your Heart Out Birdy - Wings Bon Jovi - Always
-
+                <h3>白雪公主與七矮人</h3>
+                <ul>
+                  <li>心理碩二：林楷潔 </li>
+                 <li>電機一：張洁瑞</li>
+                 <li>機械一：熊家和</li>
+                 <li>電機一：曾威程</li>
+                 <li>電機一：李育嘉</li>
+                 <li>電機一：郭彥滕</li>
+                 <li>生機一：周至恩</li>
+                 <li>政治一：黃啟祐</li>
+                 <li>電機一：汪子茗</li>
+                </ul>
+                <h4>樂團介紹</h4>
+                <p>
+                「嘿咻～嘿咻～好累阿！」 周至恩氣喘吁吁地抱怨著。<br>
+                  「對阿～終於工作完了，可以吃白雪姊姊做的漢堡了！」 李育嘉一臉興奮地表示。 <br>
+                  「不要漢堡啦，我比較想吃拉麵」 此話甫畢，熊家和露出舌頭輕輕滑過嘴唇。 <br>
+                  「不要爭啦！只要是白雪姊姊做的都好吃郭彥滕幸福的神情露於言表。 <br>
+                  「前面的走快點啦！我已經等不及要回家了」 餓到發慌的汪子茗明顯已飢不擇食了。 <br>
+                  「誒？地上怎會有一顆咬過的蘋果？」 黃啟祐觀察敏銳，注意家門口有顆被咬了一口的蘋果。 <br>
+                  「咦？白雪姊姊怎麼倒在地上呢！」 最喜歡大姐姐的曾威程一見到倒在地上的白雪姊姊，不禁驚呼一聲。<br>
+                 <br>
+                  正當大家徬徨無計之時，曾威程拿了一旁的吉他輕輕地刷了一段旋律，只見白雪姊姊眼皮微微地抽動，但七矮人卻已驚喜萬分！<br>
+                  周志恩趕緊抓緊貝斯，黃啟祐則快步走上鋼琴檯，李育嘉和郭彥滕接好導線，熊家和調整好效果器，只等著鼓手汪子茗給個四拍，便要將白雪姊姊喚醒。 <br>
+                  此時周遭安靜無聲，突然傳來鼓棒敲擊的聲音。 <br>
+                  「喀－喀－喀－喀－」...... <br>
+                  <br>
+                  究竟白雪姊姊是否能醒來呢？<br>
+                 <br>
+                  12/19電資野台 一續上次五系舞會的童話主題 <br>
+                  白雪公主與七矮人將在公館PIPE上與大家 共襄盛舉！！！！<br>
+                </p>
+                <hr>
+                <ol>
+                  <li>Mr.Big - Shine </li>
+                  <li>Oasis - Stop Crying Your Heart Out</li>
+                  <li>Birdy - Wings </li>
+                  <li>Bon Jovi - Always</li>
+                </ol>
             </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
         </div>
         <div class="well" id="band9">
             <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
             </div>
             <div class="col-md-9">
-                <h4>Reunion</h4> 團員： 資工二 王浩恩 資工二 林家緯 中正通訊 許銘宸 政大會計 蘇彥誠 樂團介紹： Old Friends. Beer. Music. Reunion. 歌曲： 滅火器-海上的人 John Mayer - Slow Dancing in a Burning Room io - 真實
+                <h3>Reunion</h3> 
+                <ul> 
+                  <li>資工二：王浩恩 </li>
+                  <li>資工二：林家緯 </li>
+                  <li>中正通訊：許銘宸 </li>
+                  <li>政大會計：蘇彥誠 </li>
+                </ul>
+                <h4>樂團介紹</h4>
+                <p>
+                Old Friends. <br>
+                Beer. <br>
+                Music. <br>
+                Reunion.<br>
+                </p>
+                <hr>
+                <ol>
+                  <li> 滅火器 - 海上的人</li>
+                  <li> John Mayer - Slow Dancing in a Burning Room</li>
+                  <li> io - 真實</li>
+                </ol>
             </div>
         </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
     </div>
@@ -279,8 +400,29 @@
         <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
         </div>
         <div class="col-md-9">
-            <h4>11. The Ins.</h4>
-            <h4>PA大哥</h4> 團員： 電機三 李驊恩 電機三 李凱皇 電機三 許遠哲 電機三 李威德 化工三 張兆文 獸醫二 Mario 聖約翰科大醫護資訊一 吳學穎 樂團介紹： ROCKKKKKKKKK! 人難免會感到迷惘，無論是對愛情亦或是人生方向‧‧‧ 但迷網只是浮雲，搖滾才是硬道理! 我們是PA大哥!希望能在熱情的夜觸動你的心! 歌曲： Toto-King of the world 汪峰-春天裡 FTIsland-Black chocolate
+            <h3>PA大哥</h3>
+            <ul>
+              <li>電機三：李驊恩</li>
+              <li>電機三：李凱皇</li>
+              <li>電機三：許遠哲</li>
+              <li>電機三：李威德</li>
+              <li>化工三：張兆文</li>
+              <li>獸醫二：Mario </li>
+              <li>聖約翰科大醫護資訊一：吳學穎</li>
+            </ul>
+            <h4> 樂團介紹</h4>
+            <p>
+            ROCKKKKKKKKK!<br>
+            人難免會感到迷惘，無論是對愛情亦或是人生方向‧‧‧ <br>
+            但迷網只是浮雲，搖滾才是硬道理! <br>
+            我們是PA大哥!希望能在熱情的夜觸動你的心! <br>
+            <p>
+            <hr>
+            <ol>
+              <li>Toto - King of the world</li>
+              <li> 汪峰- 春天裡</li>
+              <li>FTIsland - Black chocolate</li>
+            </ol>
         </div>
     </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
     </div>
@@ -288,7 +430,29 @@
         <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
         </div>
         <div class="col-md-9">
-            <h4>小蜜蜂</h4> 團員： 電機三 張瑞智 資工二 呂明臻 生機三 杜竣擇 電機碩二 林廉喬 電機碩一 許證捷 電信碩一 潘善斌 樂團介紹： 嗡嗡嗡，嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡，嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡 ...嗡嗡嗡嗡嗡嗡~~~嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡!! 我知道你看不懂 來野台聽就懂了 歌曲： pinkzebra - larger than life one ok rock - be the light coldplay - viva la vida
+            <h3>小蜜蜂</h3>
+            <ul>
+              <li>電機三：張瑞智 </li>
+             <li>資工二：呂明臻</li>
+             <li>生機三：杜竣擇</li>
+             <li>電機碩二：林廉喬</li>
+             <li>電機碩一：許證捷</li>
+             <li>電信碩一：潘善斌</li>
+            </ul>
+            <h4>樂團介紹</h4>
+            <p>
+              嗡嗡嗡，嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡，嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡<br>
+              嗡嗡嗡嗡嗡嗡嗡 ...嗡嗡嗡嗡嗡嗡~~~嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡嗡!! <br>
+              <br>
+              我知道你看不懂<br> 
+              來野台聽就懂了<br>
+            </p>
+            <hr>
+            <ol> 
+              <li>pinkzebra - larger than life</li>
+              <li>one ok rock - be the light </li>
+              <li>coldplay - viva la vida</li>
+            </ol>
         </div>
     </div><a href="#" class="btn btn-xs btn-info">Back to top</a>
     </div>
@@ -296,14 +460,53 @@
         <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
         </div>
         <div class="col-md-9">
-            <h4>The Ins.</h4> 團員： 資工二 陳映紅 資工二 楊喬宇 資工二 陳思憫 資工二 郭傳駿 資工二 陳璽安 樂團介紹： 沒有，我們什麼都沒有除了灰底的sublime黑底的bash和系館地下室的紅藍沙發以外我們一無所有救贖，我們需要救贖我們需要寧靜的夜甘美的酒和動人的樂音以洗滌我們貧乏的心靈即使暗夜使我們迷失我們仍不會停止對於光明的找尋Cause music directs. Cause music is our inner treasure. We are The Ins. 歌曲： P!nk – Try Rihanna – Diamonds Avril Lavigne - Nobody's Home
+            <h3>The Ins.</h3>
+            <ul> 
+             <li>資工二：陳映紅</li>
+             <li>資工二：楊喬宇</li>
+             <li>資工二：陳思憫</li>
+             <li>資工二：郭傳駿</li>
+             <li>資工二：陳璽安</li>
+            </ul>
+            <h4>樂團介紹</h4>
+            <p>
+            沒有，我們什麼都沒有除了灰底的sublime黑底的bash和系館地下室的紅藍沙發以外我們一無所有救贖，我們需要救贖我們需要寧靜的夜甘美的酒和動人的樂音以洗滌我們貧乏的心靈即使暗夜使我們迷失我們仍不會停止對於光明的找尋Cause music directs. Cause music is our inner treasure. We are The Ins. 
+            </p>
+            <hr>
+            <ol>
+              <li>P!nk - Try</li>
+              <li>Rihanna - Diamonds </li>
+              <li>Avril Lavigne - Nobody's Home</li>
+            </ol>
         </div>
     </div>
     <div class="well" id="band13">
         <div class="col-md-3"><img src="http://placehold.it/200x200&text=band1" class="img-responsive">
         </div>
         <div class="col-md-9">
-            <h4>Football Love</h4> 團員: 黃致皓 電機四 簡上博 電機四 黃柏豪 光電碩二 章尚群 文化大學 傳播四 康偉理 台北大學 財金三 樂團介紹： 後搖,來自台北,我們不會踢足球。 Hooligan 黃柏豪Goalkeeper 黃致皓Journeyman 康偉理Rainmaker 章尚群 https://www.facebook.com/footballloveofficial 歌曲： 自創 - Black Waltz Maybeshewill - co-conspirators 自創 - 歧角
+            <h3>Football Love</h3>
+            <ul> 
+             <li>黃致皓 電機四</li>
+             <li>簡上博 電機四</li>
+             <li>黃柏豪 光電碩二</li>
+             <li>章尚群 文化大學</li>
+             <li>傳播四 康偉理 </li>
+             <li>台北大學 財金三 </li>
+            </ul>
+            <h4>樂團介紹</h4>
+            <p> 
+            後搖,來自台北,我們不會踢足球。<br>
+            Hooligan 黃柏豪 Goalkeeper 黃致皓 Journeyman 康偉理 Rainmaker 章尚群 <br>
+            <a href="https://www.facebook.com/footballloveofficial" target="_blank">
+              https://www.facebook.com/footballloveofficial
+            </a> <br>
+            </p>
+            <hr>
+            <ol>
+              <li>自創 - Black Waltz </li>
+              <li>Maybeshewill - co-conspirators </li>
+              <li>自創 - 歧角</li>
+            </ol>
         </div>
     </div>
     <div class="container-fluid" id="agenda">
