add blockquote strait quote

--- a/index.html
+++ b/index.html
@@ -161,11 +161,12 @@
                  <li>電機一：張顥霆</li>
                 </ul> 
                 <h4>樂團介紹</h4>
-                <p>
-                  <blockquote>
-                    許秉鈞：…有一個樂團叫做How To Program C++ <br>
-                    童寬：那我們只好Hello, World!
+                <blockquote>
+                    <p>許秉鈞：…有一個樂團叫做How To Program C++ <br>
+                    童寬：那我們只好Hello, World!</p>
                   </blockquote> 
+                <p>
+                  
                   小海豚與系花紅遍電機B03但不是團員 <br>
                   電機一魯團和隔壁混搭溫溫團大對比<br> 
                   系排團取的團名過猛只好收斂一些 <br>
