add missing colon to band 13

--- a/index.html
+++ b/index.html
@@ -492,12 +492,12 @@
 			<div class="col-md-9">
 				<h3>Football Love</h3>
             <ul> 
-             <li>黃致皓 電機四</li>
-             <li>簡上博 電機四</li>
-             <li>黃柏豪 光電碩二</li>
-             <li>章尚群 文化大學</li>
-             <li>傳播四 康偉理 </li>
-             <li>台北大學 財金三 </li>
+             <li>黃致皓：電機四</li>
+             <li>簡上博：電機四</li>
+             <li>黃柏豪：光電碩二</li>
+             <li>章尚群：文化大學</li>
+             <li>傳播四：康偉理 </li>
+             <li>台北大學：財金三 </li>
             </ul>
             <h4>樂團介紹</h4>
             <p> 
