--- a/index.html
+++ b/index.html
@@ -475,7 +475,9 @@
             </ul>
             <h4>樂團介紹</h4>
             <p>
-            沒有，我們什麼都沒有除了灰底的sublime黑底的bash和系館地下室的紅藍沙發以外我們一無所有救贖，我們需要救贖我們需要寧靜的夜甘美的酒和動人的樂音以洗滌我們貧乏的心靈即使暗夜使我們迷失我們仍不會停止對於光明的找尋Cause music directs. Cause music is our inner treasure. We are The Ins. 
+            沒有，我們什麼都沒有除了灰底的sublime黑底的bash和系館地下室的紅藍沙發以外我們一無所有救贖，<br>
+            我們需要救贖我們需要寧靜的夜甘美的酒和動人的樂音以洗滌我們貧乏的心靈即使暗夜使我們迷失我們仍不會停止對於光明的找尋。<br>
+            Cause music directs. Cause music is our inner treasure. We are The Ins. 
             </p>
             <hr>
             <ol>
@@ -492,12 +494,11 @@
 			<div class="col-md-9">
 				<h3>Football Love</h3>
             <ul> 
-             <li>黃致皓：電機四</li>
-             <li>簡上博：電機四</li>
-             <li>黃柏豪：光電碩二</li>
-             <li>章尚群：文化大學</li>
-             <li>傳播四：康偉理 </li>
-             <li>台北大學：財金三 </li>
+             <li>電機四：黃致皓 </li> 
+<li>電機四：簡上博 </li>
+<li>光電碩二：黃柏豪 </li>
+<li>文化大學傳播四：章尚群 </li>
+<li>台北大學財金三：康偉理 </li>
             </ul>
             <h4>樂團介紹</h4>
             <p> 
